--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,9 +4,9 @@ services:
   app:
     build:
       context: .
-    command: yarn -v
+    command: yarn start -- --host
     volumes:
       - .:/app
       - /app/node_modules
     ports:
-      - 3000:3000
+      - 8080:8080
