fix: local docker doesnt work with prod dockerfile

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,7 @@ services:
   app:
     build:
       context: .
+      dockerfile: Dockerfile.dev
     command: yarn start -- --host
     volumes:
       - .:/app
