--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_API_BASE_URL=https://cdn.jwplayer.com
 APP_PLAYER_ID=M4qoGvUk
 
 # the default language that the app should load when the language couldn't be detected
-APP_DEFAULT_LANGUAGE=en
+APP_DEFAULT_LANGUAGE=fi
 
 # a comma separated list of languages that are enabled (this only works for languages that are enabled in the app)
-APP_ENABLED_LANGUAGES=en,es
+APP_ENABLED_LANGUAGES=fi
