fix: hmr not working properly

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,9 +5,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.dev
-    command: yarn start -- --host
+    command: yarn start
     volumes:
-      - .:/app
-      - /app/node_modules
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
     ports:
       - 8080:8080
