--- a/package.json
+++ b/package.json
@@ -57,12 +57,14 @@
     "payment": "^2.4.6",
     "planby": "^0.3.0",
     "react": "^18.2.0",
+    "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-i18next": "^12.2.2",
     "react-infinite-scroller": "^1.2.6",
     "react-query": "^3.39.0",
     "react-router-dom": "^6.4.0",
+    "styled-components": "^6.1.0",
     "wicg-inert": "^3.1.1",
     "yup": "^0.32.9",
     "zustand": "^3.6.9"
