--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,8 @@
 server {
     listen 80;
-    server_name frontend;  
-
-    root /usr/share/nginx/html;  
+    server_name frontend;
+    index index.html;
+    root /usr/share/nginx/html;
 
     location / {
         try_files $uri /index.html;
