--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - name: yarn install, lint
+      - name: yarn install, build
         run: |
           yarn install
           yarn build
