--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^6.0.0",
     "i18next-parser": "^8.0.0",
+    "jest-styled-components": "^7.2.0",
     "jsdom": "^22.1.0",
     "lint-staged": "^10.5.4",
     "luxon": "^3.2.1",
