--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "prepare": "husky install",
     "start": "vite",
     "start:test": "vite build --mode test && vite preview --port 8080",
-    "build": "vite build --mode ${MODE:=prod} && sh scripts/compressIni.sh build/public/videot/.webapp.ini && mv build/public/videot/index.html build/public/index.html && mkdir build/public/locales && mv build/public/videot/locales/* build/public/locales",
+    "build": "vite build --mode ${MODE:=prod} && sh scripts/compressIni.sh build/public/videot/.webapp.ini && mv build/public/videot/index.html build/public/index.html && mv build/public/videot/jwpltx.js build/public/jwpltx && mkdir build/public/locales && mv build/public/videot/locales/* build/public/locales",
     "test": "TZ=UTC LC_ALL=en_US.UTF-8 vitest run",
     "test-watch": "TZ=UTC LC_ALL=en_US.UTF-8 vitest",
     "test-coverage": "TZ=UTC LC_ALL=en_US.UTF-8 vitest run --coverage",
