feat: tryout with hosts

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_API_BASE_URL=https://cdn.jwplayer.com
+APP_API_BASE_URL=https://videot.seiska.fi
 APP_PLAYER_ID=M4qoGvUk
 
 # the default language that the app should load when the language couldn't be detected
@@ -6,3 +6,5 @@ APP_DEFAULT_LANGUAGE=fi
 
 # a comma separated list of languages that are enabled (this only works for languages that are enabled in the app)
 APP_ENABLED_LANGUAGES=fi
+
+APP_API_FRONT_URL=https://tv.seiska.fi
